--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.glong"
+        applicationId "com.glapp"
         minSdk 31
         targetSdk 32
         versionCode 1
