Fixed project/app renaming

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,7 +28,7 @@ android {
     buildFeatures {
         viewBinding true
     }
-    namespace 'com.glong'
+    namespace 'com.glapp'
 }
 
 dependencies {
